Added pki config on auth.