@@ -1,6 +1,5 @@
 package edu.osumc.bmi.oauth2.auth.client;
 
-import edu.osumc.bmi.oauth2.core.domain.Client;
 import edu.osumc.bmi.oauth2.core.domain.OAuthClientDetail;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.core.GrantedAuthority;
@@ -54,24 +53,28 @@ public class AuthClientDetails implements ClientDetails {
 
   @Override
   public Set<String> getAuthorizedGrantTypes() {
-    if (StringUtils.isBlank(clientDetail.getAuthorizedGrantTypes()))return null;
-    return new HashSet<>(Arrays.asList(StringUtils.split(clientDetail.getAuthorizedGrantTypes(), ",")));
+    if (StringUtils.isBlank(clientDetail.getAuthorizedGrantTypes())) return null;
+    return new HashSet<>(
+        Arrays.asList(StringUtils.split(clientDetail.getAuthorizedGrantTypes(), ",")));
   }
 
   @Override
   public Set<String> getRegisteredRedirectUri() {
     if (StringUtils.isBlank(clientDetail.getWebServerRedirectUri())) return null;
-//    return Set.of(StringUtils.split(clientDetail.getWebServerRedirectUri(), ","));
-      return new HashSet<>(Arrays.asList(StringUtils.split(clientDetail.getWebServerRedirectUri(), ",")));
+    //    return Set.of(StringUtils.split(clientDetail.getWebServerRedirectUri(), ","));
+    return new HashSet<>(
+        Arrays.asList(StringUtils.split(clientDetail.getWebServerRedirectUri(), ",")));
   }
 
   @Override
   public Collection<GrantedAuthority> getAuthorities() {
-    if (StringUtils.isBlank(clientDetail.getAuthorities()))return null;
+    if (StringUtils.isBlank(clientDetail.getAuthorities())) return null;
     Collection<GrantedAuthority> authorities = new HashSet<>();
-    Arrays.stream(StringUtils.split(clientDetail.getAuthorities(), ",")).forEach((auth) -> {
-      authorities.add(new SimpleGrantedAuthority(auth));
-    });
+    Arrays.stream(StringUtils.split(clientDetail.getAuthorities(), ","))
+        .forEach(
+            (auth) -> {
+              authorities.add(new SimpleGrantedAuthority(auth));
+            });
     return authorities;
   }
 
@@ -87,7 +90,8 @@ public class AuthClientDetails implements ClientDetails {
 
   @Override
   public boolean isAutoApprove(String scope) {
-    return "1".equals(clientDetail.getAutoApprove()) || Boolean.valueOf(clientDetail.getAutoApprove());
+    return "1".equals(clientDetail.getAutoApprove())
+        || Boolean.valueOf(clientDetail.getAutoApprove());
   }
 
   @Override
